--- a/input.conf
+++ b/input.conf
@@ -4,6 +4,10 @@ ALT+k add sub-font-size +1
 # decrease subtitle font size
 ALT+j add sub-font-size -1
 
+# zoom in and out video
+Alt+- add video-zoom -0.25
+Alt+= add video-zoom 0.25
+
 # Sound
 WHEEL_UP 	add volume 5 
 WHEEL_DOWN 	add volume -5
