--- a/mpv.conf
+++ b/mpv.conf
@@ -1,96 +1,42 @@
-# ──────────────────────────────────────────────────────────────────────
-# Interface - https://mpv.io/manual/stable/#osd
-# ──────────────────────────────────────────────────────────────────────
-osc=no																	# turn off for ModernX OSC
-osd-bar=no																# removes the default bar when scrubbing or changing volume
-osd-duration=2000														# how long osd messages show, in ms
-osd-font="Segoe UI Semibold" 											# UI font, must be available on your system, 'Noto Sans' is used often on Linux
-osd-font-size=30
-osd-outline-size=2
+# Interface
+osc=no                                                  			# for ModernX
+border=no                                               			# optional - if you don't want to see the OS border
+osd-bar=no                                              			# removes the default bar when scrubbing or changing volume
+osd-font-size=24                                        			# sets the font size of the osd
+osd-duration=4000                                       			# how long osd messages show for in ms
+title="${media-title}"												# customise as desired
+osd-font="Inter"                                  			        # osc font, must be on your computer, may revert to a fallback if unsupported languages sets are in any text
+autofit-smaller=640x480   											# minimum size of the window when it opens
+autofit-larger=1280x720   											# maximum size of the window when it opens - large windows wont fill the screen upon open
+geometry=1200x800-50%-50% 											# default window size and position
+force-window=immediate					                            # open window immidiately (useful when using playing web videos)
+force-window-position=yes                                           # ensures window position according to geometry
+force-seekable=yes                    								# forces videos to be seekable
+keep-open=yes             											# keep mpv open after a video ends
+watch-later-options=start,sid			                            # save position and selected subs
+watch-later-options-remove=fullscreen 								# see - https://mpv.io/manual/stable/#options-watch-later-options
 
-# ──────────────────────────────────────────────────────────────────────
-# Watch Later - https://mpv.io/manual/master/#watch-later
-# ──────────────────────────────────────────────────────────────────────
-save-position-on-quit=yes												# save position on quit
-watch-later-options=start, sid											# save position and selected subs
+# Terminal
+msg-color=yes                                                       #  color log messages on terminal
+msg-module=yes                                                      #  prepend module name to log messages
+term-osd-bar=yes                                                    #  displays a progress bar on the terminal
 
-# ──────────────────────────────────────────────────────────────────────
-# Window - https://mpv.io/manual/stable/#window
-# ──────────────────────────────────────────────────────────────────────
-title="${filename}"														# customise as desired
-keep-open=yes 															# keep mpv open after a video ends
-# border=no																# optional - if you don't want to see the OS border
-title-bar=no															# optional - if you don't want to see the OS title bar
-autofit-larger=75%x75%				    								# maximum size of the window when it opens - large windows wont fill the screen upon open
-autofit-smaller=640x480													# minimum size of the window when it opens
+# YouTube
+#ytdl-format=bestvideo[height<=?1080][vcodec^=avc1]+bestaudio/best	# limit to 1080p - lower CPU usage
+ytdl-format=bestvideo[height<=?2160]+bestaudio/best					# limit resolution to 2160p - better bitrate
+hls-bitrate=max														# internet video streaming
 
-# ──────────────────────────────────────────────────────────────────────
-# Terminal - https://mpv.io/manual/stable/#terminal
-# ──────────────────────────────────────────────────────────────────────
-msg-color=yes                           								# color log messages on terminal
-msg-module=yes                          								# prepend module name to log messages
+# Video
+hwdec=vaapi 										                # enable hardware decoding, may reduce CPU usage - https://mpv.io/manual/stable/#options-hwdec
 
-# ──────────────────────────────────────────────────────────────────────
-# Playlist - https://mpv.io/manual/master/#options-prefetch-playlist
-# ──────────────────────────────────────────────────────────────────────
-directory-mode=ignore													# ignore subdirectories
-autocreate-playlist=filter												# add other files in directory into a playlist
-directory-filter-types=video,audio
+# Audio
+audio-file-auto=fuzzy					                            # ensure all audio tracks can be loaded
+audio-stream-silence=yes                                            # fix audio popping on random seek
+volume-max=150							                            # amplify volume above 100
+alang=eng,en,enUS,en-US,jpn,jp			                            # audio language priority
+slang=eng,en 							                            # subtitle language priority
 
-# ──────────────────────────────────────────────────────────────────────
-# YouTube/Web Videos - https://mpv.io/manual/master/#options-ytdl-format
-# ──────────────────────────────────────────────────────────────────────
-ytdl-format=bestvideo[height<=?2160]+bestaudio/best						# limit resolution to 2160p - better bitrate
-# ytdl-format=bestvideo[height<=?1080][vcodec^=avc1]+bestaudio/best		# limit to 1080p h264 - lower CPU usage
-hls-bitrate=max															# internet video streaming
-
-# ──────────────────────────────────────────────────────────────────────
-# Video - https://mpv.io/manual/stable/#video
-# ──────────────────────────────────────────────────────────────────────
-# Settings to do with video - essentially whether to utilize the CPU 
-# or GPU more, you can change api with --gpu-api and enable hardware 
-# decoding with --hwdec=auto-safe
-# ──────────────────────────────────────────────────────────────────────
-vo=gpu-next																# newer rendering pipeline
-# profile=fast 															# for slow computers
-
-# ──────────────────────────────────────────────────────────────────────
-# Audio - https://mpv.io/manual/stable/#audio
-# ──────────────────────────────────────────────────────────────────────
-# Note, the windows setting 'Audio Enhancements' can break downsampling 
-# for surround tracks, disable disable that option to fix this problem
-# ──────────────────────────────────────────────────────────────────────
-audio-file-auto=fuzzy													# ensure all audio tracks can be loaded
-volume-max=150															# amplify volume above 100
-alang=jpn,jp,ko,eng,en,enUS,en-US										# audio language priority
-slang=eng,en 															# subtitle language priority
-
-# ──────────────────────────────────────────────────────────────────────
-# Subtitles - https://mpv.io/manual/stable/#subtitles
-# ──────────────────────────────────────────────────────────────────────
-sub-auto=fuzzy 															# external subs don't have to match the file name to autoload (use fuzzy otherwise)
-sub-ass-override=force													# personal preference - this removes custom fonts from subtitles
-sub-font="Segoe UI Semibold"											# change the subtitle font of lines without a specificed font
-																		# use 'Noto Sans' for some systems
-sub-font-size=32														# subtitle size, use instead of sub-scale to avoid breaking some subtitles
-sub-border-size=2
-sub-back-color=000000
-sub-shadow-offset=1
-secondary-sub-pos=6														# position the secondary subtitle slightly downwards from the top of the screen, for detectdualsubs.lua
-
-# ──────────────────────────────────────────────────────────────────────
-# Profiles - https://mpv.io/manual/stable/#profiles
-# ──────────────────────────────────────────────────────────────────────
-# Profiles mean that settings that can be changed based on various
-# requirements
-# ──────────────────────────────────────────────────────────────────────
-
-[2K rendering]														# use GPU rendering for videos at 2K/1440p and above
-profile-desc=2K rendering
-profile-cond=height >= 1440  and not (audio_codec and (container_fps == nil or container_fps == 1))
-hwdec=auto-safe
-
-[audio]
-sub-font="A-OTF Shin Go Pro M"
-# script-opts-append=modernx-persistent_progress=yes
-profile-cond=audio_codec and (container_fps == nil or container_fps == 1)
+# Subtitles
+sub-auto=fuzzy 							                            # external subs don't have to match the file name to autoload (use fuzzy otherwise)
+sub-font="Inter"					                                # change the subtitle font of lines without a specificed font
+sub-font-size=24						                            # subtitle size, use instead of sub-scale to avoid breaking some subtitles
