--- a/input.conf
+++ b/input.conf
@@ -1,49 +1,133 @@
-# ──────────────────────────────────────────────────────────────────────
-# Increase or decrease subtitle font size
-# ──────────────────────────────────────────────────────────────────────
-= add sub-font-size +1
-- add sub-font-size -1
+# playback speed
+- multiply speed 1/1.1              # decrease the playback speed
+= multiply speed 1.1                # increase the playback speed
+_ multiply speed 0.5                # halve the playback speed
++ multiply speed 2.0                # double the playback speed
 
-# ──────────────────────────────────────────────────────────────────────
-# Change volume with the scroll wheel
-# ──────────────────────────────────────────────────────────────────────
-WHEEL_UP 	add volume 5 
+# video zoom and panscan
+[ add video-zoom 0.25               # zoom in
+{ add video-zoom -0.25              # zoom out
+] add panscan 0.1                   # decrease panscan
+} add panscan -0.1                  # increase panscan
+\ set video-zoom 0 ; set video-pan-x 0 ; set video-pan-y 0 # reset zoom and pan settings
+
+# show track-list and playlist
+; show-text ${track-list}           # show the list of video, audio and sub tracks
+' show-text ${playlist}             # show the playlist
+
+# toggle OSD
+t no-osd cycle-values osd-level 3 1     # toggle displaying the OSD on user interaction or always
+
+# sound
+WHEEL_UP 	add volume 5
 WHEEL_DOWN 	add volume -5
 
-# ──────────────────────────────────────────────────────────────────────
-# Shuffle playlist
-# ──────────────────────────────────────────────────────────────────────
-ctrl+s playlist-shuffle ; show-text "Shuffled playlist"
+# seek and volume
+CTRL+SHIFT+RIGHT    playlist-next           # skip to the next file
+CTRL+SHIFT+LEFT     playlist-prev           # skip to the previous file
+SHIFT+RIGHT         add chapter 1           # seek to the next chapter
+SHIFT+LEFT          add chapter -1          # seek to the previous chapter
+ALT+RIGHT           seek 1                  # seek 1 seconds forward
+ALT+LEFT            seek -1                 # seek 1 seconds backward
+ALT+UP              add volume 1            # increase volume by 1
+ALT+DOWN            add volume -1           # decrease volume by 1
+RIGHT               seek 5                  # seek 5 seconds forward
+LEFT                seek -5                 # seek 5 seconds backward
+UP                  add volume 5            # increase volume by 5
+DOWN                add volume -5           # decrease volume by 5
+CTRL+RIGHT          seek 10                 # seek 10 seconds forward
+CTRL+LEFT           seek -10                # seek 10 seconds backward
+CTRL+UP             add volume 10           # increase volume by 10
+CTRL+DOWN           add volume -10          # decrease volume by 10
 
-# ──────────────────────────────────────────────────────────────────────
-# Script keybindings
-# ──────────────────────────────────────────────────────────────────────
-alt+n script-binding autolyrics/netease-download
-alt+m script-binding autolyrics/musixmatch-download
-alt+o script-binding autolyrics/offset-sub
+# video and audio quality selector
+f script-binding selectformat/menu
 
-ctrl+b script-binding detectdualsubs/key_bind_check_for_dual_subs
+# screenshot
+INS screenshot video                     # take a screenshot of the video in its original resolution without subtitles
+ALT+INS screenshot                       # take a screenshot of the video in its original resolution with subtitles
+CTRL+INS screenshot window               # take a screenshot of the window with OSD and subtitles
 
-ctrl+left script-binding modernx/prevfile
-ctrl+right script-binding modernx/nextfile
-shift+left script-binding modernx/prevchapter
-shift+right script-binding modernx/nextchapter
-x script-binding modernx/cycleaudiotracks
-c script-binding modernx/cyclecaptions
-b script-binding modernx/persistenttoggle
-d script-binding modernx/show_description
-tab script-binding modernx/get_chapterlist
-p script-binding modernx/pinwindow
+# open file explorer
+o script_message locate-current-file
 
-z script-binding mpvcut/cut
-Z script-binding mpvcut/cancel_cut
-a script-binding mpvcut/cycle_action
+# replay and seek to percent
+CTRL+SPACE seek 0 absolute ; set pause no
+1 seek 10 absolute-percent
+2 seek 20 absolute-percent
+3 seek 30 absolute-percent
+4 seek 40 absolute-percent
+5 seek 50 absolute-percent
+6 seek 60 absolute-percent
+7 seek 70 absolute-percent
+8 seek 80 absolute-percent
+9 seek 90 absolute-percent
+0 seek 100 absolute-percent
 
-s script-binding screenshotfolder/screenshot_done
+# playback adjustment
+F1 add contrast -1
+F2 add contrast 1
+F3 add brightness -1
+F4 add brightness 1
+F5 add gamma -1
+F6 add gamma 1
+F7 add saturation -1
+F8 add saturation 1
+F9 add volume -2
+F10 add volume 2
+F11 seek -2
+F12 seek 2
 
-ctrl+f script-binding selectformat/menu
+# play/pause
+SPACE script-message pause-replay
 
-g script-binding sponsorblock/set_segment
-G script-binding sponsorblock/submit_segment
-h script-binding sponsorblock/upvote_segment
-H script-binding sponsorblock/downvote_segment
+# stats
+i script-binding stats/display-stats-toggle
+
+# rotate and change aspect ratio
+r cycle_values video-rotate 90 180 270 0
+R cycle-values video-aspect-override "16:9" "4:3" "2.35:1" "-1" # cycle the video aspect ratio ("-1" is the container aspect)
+
+# minimize
+CTRL+MBTN_MID cycle window-minimized
+
+# maximize
+MBTN_MID cycle window-maximized
+
+# fullscreen
+ENTER cycle fullscreen
+
+# subtitle style override
+y cycle sub-ass-override
+Y cycle sub-ass-override down
+
+# sub scale
+u add sub-scale 0.1                 # increase the subtitle font size
+U add sub-scale -0.1                # decrease the subtitle font size
+
+# sub position
+j add sub-pos -1                    # move subtitles up
+J add sub-pos +1                    # move subtitles down
+
+# secondary subtitles and toggle stretching SSA/ASS subtitles
+n cycle secondary-sub-visibility            # hide or show the secondary subtitles
+N cycle sub-ass-vsfilter-aspect-compat      # toggle stretching SSA/ASS subtitles with anamorphic videos to match the historical renderer
+
+# audio delay
+x add audio-delay 0.100       # change audio/video sync by delaying the audio
+X add audio-delay -0.100      # change audio/video sync by shifting the audio earlier
+
+# toggle hardware decoding
+w cycle-values hwdec "auto-safe" "no"
+W cycle-values hwdec "auto-safe" "no" down
+
+# deinterlacing
+D cycle deinterlace     # cycle the deinterlacing filter
+
+# switch edition
+e cycle edition
+E cycle edition down
+
+# save on quit
+q script-message eof-replay
+Q quit
